--- a/kelseyskode/package.json
+++ b/kelseyskode/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kelseyskode",
-  "version": "0.1.0",
+  "version": "0.1.0","homepage": "https://kelseykodes.github.io/portfolioReact",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
